<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCF9FB"
    android:orientation="vertical"
    tools:context="com.akashshetty.quizprime.QuizActivity">

    <RelativeLayout
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toEndOf="@+id/tvPoints"
            android:layout_toRightOf="@+id/tvPoints"
            android:fontFamily="casual"
            android:padding="16dp"
            android:text="@string/quiz_score"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:fontFamily="casual"
            android:padding="16dp"
            android:text="@string/quiz_zero"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img2" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/quiz_qustn"
        android:textColor="#000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">


        <Button
            android:id="@+id/btntrue"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:fontFamily="casual"
            android:padding="10dp"
            android:rotationX="3"
            android:rotationY="17"
            android:text="@string/quiz_true"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="#6E8E0D" />

        <Button
            android:id="@+id/btnfalse"
            android:layout_width="2dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="#2196F3"
            android:fontFamily="casual"
            android:padding="10dp"
            android:rotationX="3"
            android:rotationY="-17"
            android:text="@string/quiz_false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="#9E4C4C" />
    </LinearLayout>

</LinearLayout>