<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3CECE"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context="com.akashshetty.quizprime.ResultActivity">

    <TextView
        android:id="@+id/tvGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/result_congo"
        android:textAlignment="center"
        android:textColor="#5E1919"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGrade"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/result_total"
        android:textAllCaps="false"
        android:textColor="#0C0C0C"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="250dp"
        android:layout_height="88dp"
        android:layout_below="@id/tvTotal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/holo_green_dark"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:padding="8dp"
        android:rotation="-17"
        android:rotationX="-4"
        android:rotationY="-17"
        android:text="@string/result_retry"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#6F9B9F" />

</RelativeLayout>